--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,47 +1,69 @@
-<h1>Flights</h1>
+<div class="page-title"><h1>Flights</h1></div>
 
-<%= form_tag("/", method: :get) do %>
-  <%= label_tag(:departure_airport_id, "From:") %>
-  <%= select_tag(:departure_airport_id, 
-                 options_for_select(@airports, params[:departure_airport_id])) %>
-
-  <%= label_tag(:arrival_airport_id, "To:") %>
-  <%= select_tag(:arrival_airport_id, 
-                 options_for_select(@airports, params[:arrival_airport_id])) %>
-
-  <%= label_tag(:date, "Date:") %>
-  <%= select_tag(:date, 
-                 options_for_select(@dates, params[:date])) %>
-
-  <%= label_tag(:passengers, "Travelers:") %>
-  <%= select_tag(:passengers, options_for_select([1,2,3,4], params[:passengers])) %>
-
-  <%= submit_tag("Search") %>
-<% end %>
-
-<% if @flights && @flights.any? %>
-  Flights from
-  <%= @flights[0].departure_airport.code %> to
-  <%= @flights[0].arrival_airport.code %> on
-  <%= params[:date] %>
-
-  <% @flights.each do |flight| %>
-    <%= form_tag("bookings/new", method: :get) do %>
-      <table>
-        <th>
-          <td>Departure Time</td>
-          <td>Flight Duration</td>
-        </th>
-        <tr>
-          <td><%= radio_button_tag(:flight_id, flight.id) %></td>
-          <td><%= flight.flight_time.strftime("%H:%M %Z") %></td>
-          <td><%= flight.flight_duration %></td>
-        </tr>
-      </table>
-      <%= submit_tag("Continue") %>
-      <%= hidden_field_tag(:passengers, params[:passengers]) %>
-    <% end %>
+<div class="box" id="flight-search-form">
+  <%= form_tag("/", method: :get) do %>
+    <p>
+    <%= label_tag(:departure_airport_id, "From:") %>
+    <%= select_tag(:departure_airport_id, 
+                   options_for_select(@airports, params[:departure_airport_id])) %>
+    </p>
+    <p>
+    <%= label_tag(:arrival_airport_id, "To:") %>
+    <%= select_tag(:arrival_airport_id, 
+                   options_for_select(@airports, params[:arrival_airport_id])) %>
+    </p>
+    <p>
+    <%= label_tag(:date, "Date:") %>
+    <%= select_tag(:date, 
+                   options_for_select(@dates, params[:date])) %>
+    </p>
+    <p>
+    <%= label_tag(:passengers, "Travelers:") %>
+    <%= select_tag(:passengers, options_for_select([1,2,3,4], params[:passengers])) %>
+    </p>
+    <p>
+    <%= submit_tag "Search", :class => "btn" %>
   <% end %>
-<% else %>
-  No flights found
-<% end %>
+</div>
+
+<div class="box-title search-results">
+  <h3>Search Results</h3>
+</div>
+
+<div class="all-flights box">
+  <% if @flights && @flights.any? %>
+    <div class="flights-header">
+      Flights from
+      <%= @flights[0].departure_airport.code %> to
+      <%= @flights[0].arrival_airport.code %> on
+      <%= params[:date] %>
+      for <%= params[:passengers] %>
+      <% if params[:passengers] == "1" %>
+        traveler:
+      <% else %>
+        travelers:
+      <% end %>
+    </div>
+
+    <% @flights.each do |flight| %>
+      <%= form_tag("bookings/new", method: :get) do %>
+        <table id="flights-table">
+          <th>
+            <td class="flights-table-header">Departure Time</td>
+            <td class="flights-table-header">Flight Duration</td>
+          </th>
+          <tr>
+            <td><%= radio_button_tag(:flight_id, flight.id, 
+                                     required: "required") %></td>
+            <td><%= flight.flight_time.strftime("%H:%M %Z") %></td>
+            <td><%= flight.flight_duration %></td>
+          </tr>
+        </table>
+        <%= submit_tag "Continue", :class => "btn" %>
+        <%= hidden_field_tag(:passengers, params[:passengers]) %>
+      <% end %>
+    <% end %>
+  <% else %>
+    No flights found
+  <% end %>
+</div>
