--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -9,7 +9,7 @@
   </p>
 
   <p>
-    <span>Departing at:</span>
+    <span>Departing from:</span>
     <span><%= @booking.flight.departure_airport.code %></span>
   </p>
 
