--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -8,7 +8,7 @@
   </p>
 
   <p>
-    <span>Departing at:</span>
+    <span>Departing from:</span>
     <span><%= @flight.departure_airport.code %></span>
   </p>
 
