Tidy up error messages

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -51,6 +51,12 @@ small {
   font-size: 10px;
 }
 
+.alert {
+  margin-bottom: 20px;
+  color: #fff;
+  font-style: italic;
+}
+
 .navbar {
   display: fixed;
   padding: 15px;
